--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
     <footer>
         <p>&copy; 2024 Aansh FreshFarm2Home | Premium Red Flame Seedless Grapes from Nashik</p>
         <p>Residue-Free | Export Quality | Farm Fresh</p>
-        <p style="margin-top: 10px;">📱 WhatsApp: +91-9923032665 | 📧 Email: <a href="/cdn-cgi/l/email-protection#5e3f3f2c2a37352b3d363b2c37273f1e24313631333f3732703d3133"><span class="__cf_email__" data-cfemail="5938382b2d30322c3a313c2b302038192336313634383035773a3634">[email&#160;protected]</span></a></p>
+        <p style="margin-top: 10px;">📱 WhatsApp: +91-9923032665 | 📧 Email: <a href="mailto:aartikucheriya@zohomail.in">aartikucheriya@zohomail.in</a></p>
     </footer>
 
     <!-- Floating Action Buttons -->
@@ -606,4 +606,14 @@
 _Home Delivery charges as applicable`;
 
         // WhatsApp Number
-        const whatsappNumber = '91992303
+        const whatsappNumber = '919923032665'; 
+        
+        // Create WhatsApp URL
+        const whatsappUrl = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(message)}`;
+        
+        // Open WhatsApp in new tab
+        window.open(whatsappUrl, '_blank');
+    });
+</script>
+</body>
+</html>
