--- a/index.html
+++ b/index.html
@@ -539,10 +539,10 @@
                             </div>
                             
                             <p style="line-height: 1.8; color: #333; margin-bottom: 10px;">
-                                🍇 Orders are pooled up to 50 boxes (100 kg) 📦 once or twice a week 🗓️.
+                                🍇 Orders are pooled minimum 50 boxes (100 kg) 📦 once or twice a week 🗓️.
                             </p>
                             <p style="line-height: 1.8; color: #333; margin-bottom: 10px;">
-                                🌱 After confirmation, fresh grapes are plucked ✂️ directly from Nashik farms 🚜.
+                                🌱 After confirmation, fresh grapes are plucked✂️directly from NashikFarms 🚜.
                             </p>
                             <p style="line-height: 1.8; color: #333;">
                                 📍 As per confirmed WhatsApp order Please Pickup at <strong>Laxmin Nagar, Chinchwad, Pune</strong> (Near Nisarg Misal) — with no extra charges. 
