--- a/index.html
+++ b/index.html
@@ -534,21 +534,19 @@
                                     📅 Next lot will be updated on group (mostly between 14th to 17th Feb)
                                 </p>
                                 <p style="line-height: 1.8; color: #856404;">
-                                    💬 Please join WhatsApp update group for more details 👇
+                                    💬 Please join WhatsApp Grapesupdate group for upcoming 🍇lot updates 👇
                                 </p>
                             </div>
                             
                             <p style="line-height: 1.8; color: #333; margin-bottom: 10px;">
-                                🍇 Orders are pooled minimum 50 boxes (100 kg) 📦 once or twice a week 🗓️.
+                                🍇Orders are pooled minimum 50 boxes (100 kg) 📦 once or twice a week🗓️.
                             </p>
                             <p style="line-height: 1.8; color: #333; margin-bottom: 10px;">
-                                🌱 After confirmation, fresh grapes are plucked✂️directly from NashikFarms 🚜.
+                                🌱After confirmation, fresh🍇are plucked✂️directly from Nashik Farms🚜.
                             </p>
                             <p style="line-height: 1.8; color: #333;">
-                                📍 As per confirmed WhatsApp order Please Pickup at <strong>Laxmin Nagar, Chinchwad, Pune</strong> (Near Nisarg Misal) — with no extra charges. 
-                            </p>
-                            <p style="line-height: 1.8; color: #333; margin-top: 10px;">
-                                🚗 For home delivery nominal charges applicable upto KM 5/10/15/20 - Rs.99/149/199/249
+                                📍Self Pickup at <strong>Laxmin Nagar, Chinchwad, Pune</strong> with no extra charges. 
+                                🚗For Home Delivery nominal charges applicable upto KM 5/10/15/20 - Rs.99/149/199/249
                             </p>
                         </div>
                     </div>
