--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                                 🌱After confirmation, fresh🍇are plucked✂️directly from Nashik Farms🚜.
                             </p>
                             <p style="line-height: 1.8; color: #333;">
-                                📍Self Pickup at <strong>Laxmin Nagar, Chinchwad, Pune</strong> with no extra charges. 
+                                📍Self Pickup at <strong>Laxmin Nagar, Chinchwad, Pune</strong> with no extra charges.
                                 🚗For Home Delivery nominal charges applicable upto KM 5/10/15/20 - Rs.99/149/199/249
                             </p>
                         </div>
@@ -568,7 +568,7 @@
     <footer>
         <p>&copy; 2024 Aansh FreshFarm2Home | Premium Red Flame Seedless Grapes from Nashik</p>
         <p>Residue-Free | Export Quality | Farm Fresh</p>
-        <p style="margin-top: 10px;">📱 WhatsApp: +91-9923032665 | 📧 Email: <a href="/cdn-cgi/l/email-protection#32535340465b5947515a57405b4b5372485d5a5d5f535b5e1c5b5c"><span class="__cf_email__" data-cfemail="67060615130e0c12040f02150e1e06271d080f080a060e0b490e09">[email&#160;protected]</span></a></p>
+        <p style="margin-top: 10px;">📱 WhatsApp: +91-9923032665 | 📧 Email: aartikucheriya@zohomail.in </span></a></p>
     </footer>
 
     <!-- Floating Action Buttons -->
