--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                             <!-- Booking Status Alert -->
                             <div style="background: #fff3cd; border: 2px solid #ffc107; border-radius: 6px; padding: 15px; margin-bottom: 15px;">
                                 <p style="line-height: 1.8; color: #856404; font-weight: 600; margin-bottom: 8px;">
-                                    ⚠️ <strong>11th Feb 2025 lot FULLY BOOKED</strong>
+                                    ⚠️ <strong>Thank you for your support our 11-Feb-2026(Wed) lot FULLY BOOKED</strong>
                                 </p>
                                 <p style="line-height: 1.8; color: #856404; margin-bottom: 8px;">
                                     📅 Next lot will be updated on group (mostly between 14th to 17th Feb)
@@ -545,7 +545,7 @@
                                 🌱After confirmation, fresh🍇are plucked✂️directly from Nashik Farms🚜.
                             </p>
                             <p style="line-height: 1.8; color: #333;">
-                                📍Self Pickup at <strong>Laxmin Nagar, Chinchwad, Pune</strong> with no extra charges.
+                                📍Self Pickup at <strong>Laxmi Nagar, Chinchwad, Pune</strong> with no extra charges.
                                 🚗For Home Delivery nominal charges applicable upto KM 5/10/15/20 - Rs.99/149/199/249
                             </p>
                         </div>
