--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
     <footer>
         <p>&copy; 2024 Aansh FreshFarm2Home | Premium Red Flame Seedless Grapes from Nashik</p>
         <p>Residue-Free | Export Quality | Farm Fresh</p>
-        <p style="margin-top: 10px;">📱 WhatsApp: +91-9923032665 | 📧 Email: aartikucheriya@zohomail.in </span></a></p>
+        <p style="margin-top: 10px;">📱 WhatsApp: +91-9923032665 | 📧 Email: <a href="mailto:aartikucheriya@zohomail.in">aartikucheriya@zohomail.in</a></p>
     </footer>
 
     <!-- Floating Action Buttons -->
@@ -592,7 +592,6 @@
         </a>
     </div>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     <script>
     // Handle the Form Submission
     document.getElementById('orderForm').addEventListener('submit', function(e) {
