--- a/index.html
+++ b/index.html
@@ -616,11 +616,10 @@
 🏠 *Address:* ${address}
 
 _Home Delivery charges as applicable_
-
 📅 *Upcoming grapes lot may come 14th to 17th Feb. We will update exact details on community group.*`;
 
         // WhatsApp Number
-        const whatsappNumber = '+919923032665'; 
+        const whatsappNumber = '919923032665'; 
         
         // Create WhatsApp URL
         const whatsappUrl = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(message)}`;
